[package]
name = "trezoa-cfg-if"
version = "1.0.0"
authors = ["Trezoa Team <team@trezoa.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trezoa-team/cfg-if"
homepage = "https://github.com/trezoa-team/cfg-if"
documentation = "https://docs.rs/trezoa-cfg-if"
description = """
A macro to ergonomically define an item depending on a large number of #[cfg]
parameters. Structured like an if-else chain, the first matching branch is the
item that gets emitted.
"""
edition = "2018"

[badges]
travis-ci = { repository = "trezoa-team/cfg-if" }

[dependencies]
core = { path = "../core", optional = true }
# core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { path = "../compiler-builtins", optional = true }

[features]
rustc-dep-of-std = ['core', 'compiler_builtins']
